@@ -11,8 +11,10 @@ mupdf (1.2-1) experimental; urgency=low
   * Add Quoc-Viet Nguyen as co-maintainer. Congratulations!
   * Bump Standards-Version to 3.9.4, no changes needed
   * debian/copyright: Updated.
+  * Provides: pdf-viewer. (Closes: #682450)
+  * Enable CPPFLAGS hardening flags. Thanks Simon Ruderich (Closes: #665315)
 
- -- Kan-Ru Chen (陳侃如) <koster@debian.org>  Thu, 20 Jun 2013 01:24:14 +0800
+ -- Kan-Ru Chen (陳侃如) <koster@debian.org>  Thu, 20 Jun 2013 01:29:36 +0800
 
 mupdf (0.9-2) unstable; urgency=low
 
